# LandslidePrediction

./: config.py  create_tensor.py  data_builder.py  dataset.py  main.py  model.py  puthumala_tensor.npy  pyproject.toml  report.md  temp.py  train.py  utils.py
