[project]
name = "landslideprediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "opencv-python>=4.13.0.92",
    "rasterio>=1.5.0",
    "torch>=2.11.0",
    "xarray>=2026.2.0",
]
